fix btn pagination size on small screen and show left menu on search page

--- a/style.css
+++ b/style.css
@@ -323,4 +323,8 @@ input[type="search"]::-webkit-search-cancel-button {
     .footer-donate {
         border: none;
     }
+
+    .page-link {
+        padding: 0.2rem 0.35rem;
+    }
 }
